infrastructure/argocd/overlays/prod/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-dashboard 
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: crowdsec-traefik-bouncer-crowdsec-traefik-bouncer@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: argocd.tpi2.local
    http:
      paths:
      - backend:
          service:
            name: argocd-server
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
